# ru-api-free

./: .gitignore  README.md  pyproject.toml  requirements.txt
ru_api_free/: __init__.py  __main__.py  adjectives.py  aspect_pairs.py  conjugator.py  declension.py  dictionary.py  main.py  pluraliser.py
ru_api_free/static/: index.html
